--- a/style.css
+++ b/style.css
@@ -6,3 +6,16 @@ h2 {font-size: 200%}
 #ronaldo2 {width:70%}
 #ronaldo1 {margin-left:15%;}
 #ronaldo {margin-right: 30%}
+h3 {font-size:120%}
+
+h4 {font-size:75%}
+
+h5 {font-size:65%}
+h6 {font-size: 55%}
+
+h2{color:bisque}
+h3{color:blue}
+h4{color:aqua}
+h5{color:brown}
+h6{color:brown}
+
