--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ h6{color:brown}
 
 #ronaldo4 {margin-right:120% ;}
 
+#ronaldo4 {color: azure;}
+#ronaldo1 {color:azure}
+#ronaldo3 {color: azure}
+#ronaldo2 {color:azure}
+body {background-color: black;}
 
 
 
