--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ h4 {font-size:80%}
 h5 {font-size:80%}
 h6 {font-size: 80%}
 
-h2{color:bisque}
-h3{color:blue}
+h2{color:aqua}
+h3{color:aqua}
 h4{color:aqua}
-h5{color:brown}
-h6{color:brown}
+h5{color:aqua}
+h6{color:aqua}}
 
 #ronaldo4 {width: 75%;color: bisque;}
 
